--- a/_posts/2019-12-23-the-us-narrative-today.html
+++ b/_posts/2019-12-23-the-us-narrative-today.html
@@ -1680,107 +1680,107 @@ stories:
   domain: http://www.highlandernews.com/
   link: https://www.highlandernews.com/articles/2016/04/29/voters-have-new-leeway-sales-tax-granite-shoals
 images:
-- name: server-cloud-server-racks-clouds-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-constitution.jpg
-- name: locked-up-steam-lock-up-steam-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-far-away.jpg
-- name: aws-s3-stories-new-79-110-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-79-110-800-500-0-max-0--5--1.jpg
-- name: la-muse-down-the-line-harlem.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-down-the-line-harlem.jpg
-- name: nazi-invasion-old-gas-station_36680991076_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-gas-station_36680991076_o.jpg
-- name: oldhotel-oldhotel-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-crafty-painting.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-sand-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-sand-paper.JPG
-- name: mosaic-face-mosaic-face-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-plentiful.jpg
-- name: power-lines-power-lines-empty-space-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-yellow-paper.jpg
-- name: birdhouse-birdhouse-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-dali-two.jpg
-- name: capital-battle-capitolbattle-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-colored-circuits.jpg
-- name: store-on-corner-store-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-dark-rain.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-ww2-dresden.jpg
-- name: old-granary-field-oldhouse-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-crafty-painting.jpg
-- name: old-cabin-oldcabin-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-smooth-ride.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-emily-carr.jpg
-- name: supreme-court-supremecourt-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-colorful-blocks.jpg
-- name: abe-lincoln-one-sunday-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-sunday-file-00-00-15-87.jpg
-- name: dragon_close-up-leaflets-of-the-russian-revolution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-leaflets-of-the-russian-revolution.jpg
-- name: oldbarn-oldbarn-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-dark-soul.jpg
-- name: wind-mills-windmills-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-nazi-poster.jpg
-- name: eduardo-eduardo-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-spagetti-accident.jpg
-- name: oldbarn-oldbarn-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-smoking-cigarette.jpg
-- name: old-granary-field-oldhouse-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-diego-rivera1.jpg
-- name: amusement-park-amusement-park-2-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-deep-connections.jpg
-- name: oldroad-old-road-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-plentiful.jpg
-- name: white-house-lawn-white-house-window-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-bright-sand.jpg
-- name: san-francisco-street-view-san-francisco-street-view-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-post-modern.jpg
-- name: carry-load-carryload-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-blue-brush.jpg
-- name: razorwire-DSC-0080-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-dali-two.jpg
-- name: oldsmallboat-oldsmallboat-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-bright-sand.jpg
-- name: victoria-victoria-corner-hotel-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/victoria-victoria-corner-hotel-blue-brush.jpg
-- name: containership-containership-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-cinnamon-rolls.jpg
-- name: bordercrossing-bordercrossing-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-aqua.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-post-modern.jpg
-- name: copper-circuit-old-remington-typewriter.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-remington-typewriter.jpg
-- name: sand-hand-sand-hand-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-propaganda-leaflets.jpg
-- name: stalin-time-people-walking-down-street.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-people-walking-down-street.jpg
-- name: oldcabin-store-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-purple-pond.jpg
-- name: supreme-court-supremecourt-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-dark-rain.jpg
+- name: old-door-lock-old-door-lock-2-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-matrix.jpg
+- name: scream-DSC_0087.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0087.jpg
+- name: flower-barbed-wire-flower-barbed-wire-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-graham-sutherland.jpg
 - name: downtown-los-angeles-downtown-la-cinnamon-rolls.JPG
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-cinnamon-rolls.JPG
-- name: copper-circuit-train-station-cloud.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-train-station-cloud.jpg
-- name: flower-barbed-wire-flower-barbed-wire-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-purple-pond.jpg
-- name: abandonedbuildings_purple_storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_purple_storm.jpg
-- name: subway-subway-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-mucha-mult.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-copper-circuit.jpg
-- name: aws-s3-stories-cargo-ship-on-sea-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-on-sea-diego-rivera1.jpg
-- name: downtown-los-angeles-downtown-la.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la.JPG
-- name: bf-skinner-old-gas-station_35891228584_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-gas-station_35891228584_o.jpg
-- name: sand-hand-sand-hand-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-yellow-paper.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-blue-circuit-3.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-blue-circuit-3.JPG
+- name: death-valley-death-valley-national-park-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-kand-two.jpg
+- name: bordercrossing-bordercrossing-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-crabapple.jpg
+- name: window-window-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-nazi-poster.jpg
+- name: bf-skinner-flowers-diamon-creek.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-flowers-diamon-creek.jpg
+- name: school-clouds-church-clouds-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-colorful-dream.jpg
+- name: la-muse-girl-reading-garden-flowers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-girl-reading-garden-flowers.jpg
+- name: crow_wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_wols.jpg
+- name: blossombar-crafty-painting-file-00-00-50-22.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-22.jpg
+- name: nazi-invasion-surveillance-cameras_36569244062_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-surveillance-cameras_36569244062_o.jpg
+- name: old-door-lock-old-door-lock-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-blue-circuit-5.jpg
+- name: old-door-lock-old-door-lock-2-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-colorful-dream.jpg
+- name: aws-s3-stories-old-door-lock-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-old-door-lock-copper-circuit.jpg
+- name: old-church-oldchurch-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-hot-spicy.jpg
+- name: oldtrain-oldtrain-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-monet-one.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dark-rain.jpg
+- name: old-house-oldhouse-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-gan-vogh.jpg
+- name: braceros-domingo-ulloa-down-side-street-shop-sign.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-down-side-street-shop-sign.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-free-woman.jpg
+- name: window-window-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-pablo-blue.jpg
+- name: birdhouse-birdhouse-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-gan-vogh.jpg
+- name: downtheline-downtheline-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-satan-red.jpg
+- name: old-door-lock-old-door-lock-2-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-circuit-5.jpg
+- name: braceros-domingo-ulloa-los-angeles-downtown-from-afar.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-los-angeles-downtown-from-afar.jpg
+- name: christianity-christianity-under-construction-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-crunch-paper.jpg
+- name: nazi-invasion-IMG_8312.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_8312.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-nazi-poster.jpg
+- name: abe-lincoln-one-ww2-dresden-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-dresden-file-00-00-07-91.jpg
+- name: la-muse-nyc-subway-train-125th.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-nyc-subway-train-125th.jpg
+- name: subway-subway-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-dark-rain.jpg
+- name: powerlines-power-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-colored-circuits.jpg
+- name: eduardo-eduardo-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-smoking-cigarette.jpg
+- name: birdhouse-birdhouse-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-atari-missle.jpg
+- name: razorwire-DSC-0080-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-umberto-bocc.jpg
+- name: stalin-time-san-francisco-salesforce-bay-bridge.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-san-francisco-salesforce-bay-bridge.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-crabapple.jpg
+- name: aws-s3-stories-13439120-10154285627219813-3054276594176638940-n-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-13439120-10154285627219813-3054276594176638940-n-copper-circuit-2.jpg
+- name: old-barn-old-barn-1500-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-sunday.jpg
+- name: old-barn-old-barn-1500-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-internet-numbers.jpg
+- name: server-cloud-server-racks-door-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-internet-numbers.jpg
+- name: stalin-time-girl-reading-bench-garden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-girl-reading-bench-garden.jpg
+- name: copper-circuit-border-fence-down-the-line-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-border-fence-down-the-line-2.jpg
+- name: old-barn-old-barn-1500-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-mucha-mult.jpg
+- name: bf-skinner-statue-staring-down-to-right.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-statue-staring-down-to-right.jpg
+- name: berlinwall-DSC-0084-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-mucha-mult.jpg
+- name: crow-crow-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-internet-numbers.jpg
+- name: capital-battle-capitolbattle-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-blue-circuit.jpg
+- name: braceros-domingo-ulloa-castle-clouds-green-lawn.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-castle-clouds-green-lawn.jpg
 ---
 Trip To Orient Anything But Fun And Games.&nbsp;Beyond The Hardwood Giving Back With 3rd Annual Christmas Basketball Camp.&nbsp;Frost, Husker Continues To Use Juco Players To Fill Areas Of Need.&nbsp;How To Choose The Right Payment Processor.&nbsp;Black Velvets Reign Continues As Iowa Alcohol Sales Increase Again.&nbsp;Bucks Beat Pacers, Spoil Brogdon's Return.&nbsp;If Your Coffee Shop Has This, Its Winning!.&nbsp;Republic Police Chief Gets Help From Trump Campaign Manager.&nbsp;
